# askme-rs

./: Cargo.toml  README.md  install  test.csv
src/: app.rs  crossterm.rs  deck.rs  main.rs
